Rafting Project: Site Plan

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,56 +1,157 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam&family=Poppins&display=swap');
 
 :root {
-  --primary-color: #396e94;
-  --secondary-color: #e7c24f;
-  --accent1-color: #a43312;
-  --accent2-color: #381d2a;
-  --heading-font: 'Roboto', sans-serif;
-  --paragraph-font: 'Roboto', sans-serif;
-  --nav-background-color: #396e94;
-  --nav-link-color: #ffffff;
-  --nav-hover-link-color: #e7c24f;
-  --nav-hover-background-color: #381d2a;
+  --primary-color: #023047   ;
+  --secondary-color: #FFB703 ;
+  --accent1-color: #FB8500;
+  --accent2-color: white;
+
+  --heading-font: Kalam;
+  --paragraph-font: Poppins, Helvetica, sans-serif;
+
+
+  --headline-color-on-white: #4A4E69; 
+  --headline-color-on-color: white;
+  --paragraph-color-on-white: #4A4E69;
+  --paragraph-color-on-color: white;
+  --paragraph-background-color: #4A4E69;
+  --nav-link-color: white;
+  --nav-background-color: #4A4E69;
+  --nav-hover-link-color: white;
+  --nav-hover-background-color: #9A8C98;
 }
+
 
 body {
-  font-family: var(--paragraph-font);
   max-width: 960px;
-  padding: 20px;
+  margin: 0 auto;
+  padding: 4em;
+  font-size: 18px;
+  text-align: center;
 }
-
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 300px;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
-  color: var(--primary-color);
+  color: var(--headline-color-on-white);
 }
-
+h2 {
+  text-align: center;
+}
+hr {
+  height: 3px;
+  margin: 35px 0;
+  background: var(--accent1-color);
+}
 header {
-  padding: 20px;
+  padding: 1em;
+  text-align: center;
+  color: var(--paragraph-color-on-color);
+  background-color: var(--paragraph-background-color);
+}
+header > h1, header > h2 {
+  color: var(--headline-color-on-color);
+}
+p {
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color);
+  padding: 1em;
+}
+.colors {
+  width: 100%;
+  min-width: 350px;
+  margin: 30px auto;
+  text-align: center;
+}
+.colors th {
+  background-color: #999;
+}
+.colors td{
+  width: 25%;
+  height: 3em;
+}
+.primary {
+  background-color: var(--primary-color);
+}
+.secondary {
+  background-color: var(--secondary-color);
+}
+.accent1 {
   background-color: var(--accent1-color);
 }
-
-p {
-  padding: 25px;
+.accent2{
+  background-color: var(--accent2-color);
 }
-
+p.colored {
+  background-color: var(--paragraph-background-color);
+  color: var(--paragraph-color-on-color);
+}
 nav {
   background-color: var(--nav-background-color);
-  font-size: 1.2rem;
+  line-height: 3em;
+  text-align: center;
+  font-size: 1.2em;
+}
+nav  {
+  list-style-type: none;
   display: flex;
 }
-
 nav a {
-  display: block;
-  color: var(--nav-link-color);
+  padding:1em;
+  min-width: 120px;
   text-decoration: none;
-  padding: 1rem;
+  padding: 10px;
 }
-
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
 }
-
 nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
+}
+.sitemap {
+  display: grid;
+  justify-content: center;
+
+  grid-template-columns: repeat(6, 15%);
+  grid-template-rows: 3em 1.5em 1.5em 3em;
+  grid-template-areas: ". . home home . ."
+    ". . . top . ."
+    ". left left right right ."
+    "page2 page2 . . page3 page3";
+}
+.sitemap > div {
+  text-align: center;
+}
+.sm-home {
+  grid-area: home;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.sm-page2 {
+  grid-area: page2;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.sm-page3 {
+  grid-area: page3;
+  background-color: #ccc;
+  line-height: 3em;
+}
+.top {
+  grid-area: top;
+  border-left: 1px solid;
+}
+.left {
+  grid-area: left;
+  border-top: 1px solid;
+  border-left: 1px solid;
+}
+.right {
+  grid-area: right;
+  border-top: 1px solid;
+  border-right: 1px solid;
 }
